Fixed Welcoming animation overlaping with hamburger menu

--- a/style.css
+++ b/style.css
@@ -169,6 +169,13 @@ section {
   height: 80vh;
 }
 
+.section__pic-container {
+  display: flex;
+  height: 400px;
+  width: 400px;
+  margin: auto 0;
+}
+
 .section__text {
   align-self: center;
   text-align: center;
